--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --text-color: #333333;
+    --main-color: #fed100;
+}
+
 body {
     font-family: Montserrat, 'sans-serif';
     height: 100%;
@@ -16,10 +21,10 @@ body._lock {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    color: #333333;
+    color: var(--text-color);
 }
 .header {
-    background-color: #fed100;
+    background-color: var(--main-color);
 }
 .header__container {
     margin-top: 2.5rem;
@@ -31,7 +36,7 @@ body._lock {
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 2rem;
-    color: #333333;
+    color: var(--text-color);
 }
 .header__menu {
     flex: 1 1 auto;
@@ -54,14 +59,18 @@ body._lock {
 .menu__link {
     font-weight: 500;
     font-size: 1.1rem;
-    color: #333333;
+    color: var(--text-color);
+}
+.menu__link:hover {
+    font-weight: 700;
+    color: #FF352B;
 }
 .header__phone {
     font-size: 1.5rem;
     font-weight: 600;
 }
 .phone__number {
-    color: #333333;
+    color: var(--text-color);
     padding-bottom: 0.1rem;
 }
 .phone__number-underline {
@@ -88,19 +97,19 @@ body._lock {
 .icon-menu::before,
 .icon-menu::after {
     content: "";
-    background-color: #333333;
+    background-color: var(--text-color);
     height: 0.1rem;
 }
 .icon-menu span {
     height: 0.1rem;
-    background-color: #333333;
+    background-color: var(--text-color);
 }
 /*--------------------------------------------*/
 .main {
     flex: 1 1 auto;
 }
 .banner {
-    background-color: #fed100;
+    background-color: var(--main-color);
     height: 36.1rem;
 }
 .banner__container {
@@ -122,6 +131,10 @@ body._lock {
     position: relative;
     display: inline-block;
 }
+.banner-block__button:hover .banner-border__button {
+    transition: 0.2s;
+    background-color: #f2f2f2;
+}
 .banner-button {
     position: relative;
     display: inline-block;
@@ -131,6 +144,10 @@ body._lock {
     color: #f2f2f2;
     background-color: #ff352b;
     z-index: 2;
+}
+.banner-button:hover {
+    transition: 0.2s;
+    background-color: #ff772b;
 }
 .banner-border__button {
     top: 1rem;
@@ -185,7 +202,7 @@ body._lock {
     font-weight: 300;
     font-size: 3.1rem;
     position: relative;
-    text-shadow: 2px 0 0 #FED100;
+    text-shadow: 2px 0 0 var(--main-color);
     margin-right: 2.5rem;
 }
 .process-item__title {
@@ -228,15 +245,18 @@ body._lock {
     display: flex;
     justify-content: space-between;
 }
-.card:nth-child(2) {
-    border: 1px solid #fed100;
-}
+
 .card {
     width: 26.3rem;
     height: 36.18rem;
     display: flex;
     justify-content: center;
     border: 1px solid #ebebeb;
+}
+.card:hover {
+    transition: 0.2s;
+    box-shadow: 0 0.3125rem 1.875rem 0.0625rem rgba(34, 60, 80, 0.2);
+    border: 1px solid var(--main-color);
 }
 .card-info {
     padding: 5.25rem 5.56rem;
@@ -268,7 +288,12 @@ body._lock {
     padding: 0.7rem 5rem;
     font-size: 1.25rem;
     font-weight: 500;
-    background-color: #fed100;
+    background-color: var(--main-color);
+}
+.card-btn:hover {
+    transition: 0.2s;
+    color: #f2f2f2;
+    box-shadow: 0 0.25rem 1.5rem 0 var(--main-color);
 }
 .card-btn-all-prices {
     display: none;
@@ -314,7 +339,7 @@ body._lock {
     border: 1px solid #ebebeb;
 }
 .fleet-btn._active {
-    border: 2px solid #fed100;
+    border: 2px solid var(--main-color);
 }
 .slider_cards {
     display: flex;
@@ -370,7 +395,7 @@ body._lock {
 .reviews {
     margin-top: 3.2rem;
     height: 41.56rem;
-    background-color: #fed100;
+    background-color: var(--main-color);
 }
 .reviews__container {
     display: flex;
@@ -419,6 +444,12 @@ body._lock {
     font-size: 1.25rem;
     font-weight: 500;
     border: 1px solid;
+}
+.review-btn:hover {
+    transition: 0.2s;
+    font-weight: 700;
+    border: none;
+    background-color: #fff;
 }
 /*---------------------------*/
 .feedback__form {
@@ -475,7 +506,7 @@ form {
     font-family: inherit;
     font-size: 1rem;
     margin-top: 2.1rem;
-    border-bottom: 1px solid #333333;
+    border-bottom: 1px solid var(--text-color);
     padding-bottom:  0.87rem;
 }
 .block-radio-btn {
@@ -511,7 +542,7 @@ form {
     background-color: #F8F8F8;
 }
 .radio-input:checked + .radio-inp-text::before {
-    border: 2px solid #fed100;
+    border: 2px solid var(--main-color);
     background: url("../img/icons/form/checked-dot.svg") 0 0 no-repeat;
     background-position: center;
 }
@@ -551,7 +582,7 @@ form {
     background-color: #F8F8F8;
 }
 .additional-input:checked + .additional-checkbox::before {
-    border: 2px solid #fed100;
+    border: 2px solid var(--main-color);
     border-radius: 2px;
     background: url("../img/icons/form/checked-box.svg") 0 0 no-repeat;
     background-position: center;
@@ -585,9 +616,13 @@ form {
     position: absolute;
     width: 15.6rem;
     height: 3.1rem;
-    border: 2px solid #fed100;
+    border: 2px solid var(--main-color);
     z-index: 1;
     pointer-events: none;
+}
+.block-btn:hover .form-border {
+    transition: 0.2s;
+    background-color: var(--main-color);
 }
 .form-btn {
     width: 15.6rem;
@@ -604,6 +639,10 @@ form {
     color: #f2f2f2;
     background-color: #ff352b;
     z-index: 2;
+}
+.form-btn:hover {
+    transition: 0.2s;
+    background-color: #FF772B;
 }
 .form-btn::before{
     content: 'Заказать со скидкой';
@@ -653,7 +692,7 @@ iframe {
 /*----------------------------*/
 .footer {
     height: 25rem;
-    background-color: #fed100;
+    background-color: var(--main-color);
 }
 .footer__container {
     padding-top: 7rem;
@@ -663,7 +702,7 @@ iframe {
 .footer__logo {
     font-size: 1.87rem;
     font-weight: 600;
-    color: #333333;
+    color: var(--text-color);
 }
 .block-logo-policy {
     width: 16rem;
@@ -683,7 +722,7 @@ iframe {
 .footer__link {
     font-size: 1.25rem;
     font-weight: 500;
-    color: #333333;
+    color: var(--text-color);
 }
 .footer__contacts {
     width: 19.25rem;
@@ -699,7 +738,12 @@ iframe {
     font-size: 1.25rem;
     font-weight: 500;
     border: 1px solid;
-    color: #333333;
+    color: var(--text-color);
+}
+.callback__btn:hover {
+    border: none;
+    background-color: #fff;
+    font-weight: 700;
 }
 .phone-num {
     font-size: 1.25rem;
@@ -710,7 +754,7 @@ iframe {
     margin: 0 auto;
     width: 10.6rem;
     height: 1px;
-    background-color: #333333;
+    background-color: var(--text-color);
 }
 .social {
     padding-top: 1.6rem;
@@ -916,9 +960,14 @@ iframe {
     }
     .card {
         width: 26.3rem;
-        height: 36.18rem;
+        height: 30.1rem;
         display: flex;
         justify-content: center;
+        border: none;
+    }
+    .card:hover {
+        transition: none;
+        box-shadow: none;
         border: none;
     }
     .card-info {
@@ -953,12 +1002,12 @@ iframe {
         justify-content: center;
         font-size: 1.56rem;
         font-weight: 500;
-        color: #333333;
+        color: var(--text-color);
     }
     .line-all-prices{
         display: block;
         width: 9.25rem;
-        border: 1px solid #333333;
+        border: 1px solid var(--text-color);
         margin: 0 auto;
     }
     /*---------------------*/
@@ -992,7 +1041,7 @@ iframe {
     }
     .fleet-btn._active {
         border: none;
-        border-bottom: 2px solid #fed100;
+        border-bottom: 2px solid var(--main-color);
     }
     .slide {
         display: flex;
@@ -1055,7 +1104,7 @@ iframe {
         display: block;
     }
     .link-read-more {
-        color: #333333;
+        color: var(--text-color);
         text-decoration: underline;
     }
     .reviews-dots {
